[gd_scene load_steps=3 format=3 uid="uid://chk7a2cvirfou"]

[ext_resource type="Script" path="res://hud.gd" id="1_c5ukr"]
[ext_resource type="LabelSettings" uid="uid://bxus6qe8t5lee" path="res://hud.3.tres" id="1_okqpq"]

[node name="hud" type="CanvasLayer"]
script = ExtResource("1_c5ukr")

[node name="menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="nivelLabel" type="Label" parent="menu"]
layout_mode = 0
offset_left = 4.0
offset_top = 8.0
offset_right = 47.0
offset_bottom = 66.0
text = "0"
label_settings = ExtResource("1_okqpq")

[node name="tiempoLabel" type="Label" parent="menu"]
layout_mode = 0
offset_left = 414.0
offset_top = 16.0
offset_right = 457.0
offset_bottom = 74.0
text = "0"
label_settings = ExtResource("1_okqpq")

[node name="inicioLabel" type="Label" parent="menu"]
layout_mode = 0
offset_left = 51.0
offset_top = 339.0
offset_right = 427.0
offset_bottom = 442.0
text = "PERSIGE LA MONEDA"
label_settings = ExtResource("1_okqpq")
horizontal_alignment = 1

[node name="Button" type="Button" parent="menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = 69.0
offset_right = 47.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
text = "INIICIAR"

[node name="mensajeTimer" type="Timer" parent="menu"]
autostart = true

[connection signal="pressed" from="menu/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="menu/mensajeTimer" to="." method="_on_mensaje_timer_timeout"]
